<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wear Unlock</string>
    <string name="admin_receiver_status_enabled">enabled</string>
    <string name="admin_receiver_status_disabled">disabled</string>
    <string name="admin_receiver_status_pw_changed">pw changed</string>
    <string name="admin_receiver_status_pw_failed">pw failed</string>
    <string name="admin_receiver_status_pw_succeeded">pw succeeded</string>
    <string name="admin_receiver_status_disable_warning">If you deactive Wear Unlock as a device admin then it will no longer be able to secure your device.</string>
    <string name="add_admin_extra_app_text">Wear Unlock needs your permission to have the ability to toggle your device password on and off.</string>
    <string name="sample_device_admin">Wear Unlock</string>
    <string name="pref_key_enable">enable_wear_unlock</string>
    <string name="pref_key_password">password</string>
    <string name="notification_watch_connected_text">Passcode disabled.</string>
    <string name="pref_enable_off">Off</string>
    <string name="pref_enable_on">On</string>
    <string name="pref_category_password">Change password</string>
    <string name="pref_category_about">About</string>
    <string name="pref_key_version">version</string>
    <string name="pref_version">Version</string>
    <string name="pref_version_summary">%1$s (Build %2$d)</string>
    <string name="title_activity_log">Connection Log</string>
    <string name="log_connected">Android Wear device connected.  Device unlocked.</string>
    <string name="log_disconnected">Android Wear device disconnected.  Device locked.</string>
    <string name="log_no_connection_events_to_show">No connection events to show.</string>
    <string name="dialog_change_passwords_do_not_match">Passwords do not match.</string>
    <string name="dialog_change_set_password">Change password</string>
    <string name="dialog_change_password_not_changed">Password not changed.</string>
    <string name="dialog_change_cancel">Cancel</string>
    <string name="dialog_change_change">Change</string>
    <string name="pref_key_set_password">key_set_password</string>
    <string name="dialog_password_apply_now_message">Would you like to apply this new password now?  Otherwise it will only take affect the next time your Pebble has been disconnected.</string>
    <string name="dialog_password_apply_now_yes">Yes</string>
    <string name="dialog_password_apply_now_password_changed">Password changed.</string>
    <string name="dialog_password_apply_now_couldn_t_reset_password">Couldn\'t reset password.</string>
    <string name="dialog_password_apply_now_no">No</string>
    <string name="title_activity_onboarding">Setup</string>
    <string name="pref_key_wear_id">wear_id</string>
    <string name="oboarding_password_description">Wear Unlock found an Android Wear device (##%1$s##)</string>
    <string name="onboarding_connecting_with_your_pebble">Connecting with your Android Wear device</string>
    <string name="onboarding_is_your_pebble_currently_turned_on_and_connected_to_your_phone_">Is your Android Wear device Wear turned on and connected to your phone?</string>
    <string name="onboarding_pebble_unlock_needs_you_to_temporarily_turn_off_the_bluetooth_or_power_cycle_your_pebble_">Pebble Unlock needs you to temporarily turn off the Bluetooth or power cycle your Android Wear device.</string>
    <string name="onboarding_waiting_for_pebble">Waiting for Pebble</string>
    <string name="onboarding_pebble_found_">Pebble found!</string>
    <string name="onboarding_configure_password_description">Wear Unlock must disable your current device password if you already have one enabled.  Please setup a new password below that Wear Unlock can use to lock your device with when your Android Wear device is not connected.</string>
    <string name="onboarding_finish">Finish</string>
    <string name="onboarding_almost_done">Almost done!</string>
    <string name="onboarding_device_admin_summary">Wear Unlock just needs you to do one last thing.  You need to activate Wear Unlock as a device administrator so that we can toggle your lockscreen off when your Android Wear device is connected.</string>
    <string name="onboarding_request_admin_access">Request Admin Access</string>
    <string name="dialog_password_choose_your_password">Choose your password</string>
    <string name="dialog_password_confirm_password">Confirm password</string>
    <string name="admin_description">Allow your Android Wear device to control if your device is locked or not.</string>
    <string name="service_waiting_for_wear">Waiting for device...</string>
    <string name="notification_disconnected">Passcode enabled.</string>
    <string name="pref_key_enable_notification">key_enable_notification</string>
    <string name="pref_title_enable_notification">Show low priority notification</string>
    <string name="dialog_enc_warning_title">Warning</string>
    <string name="dialog_enc_warning_message">Wear Unlock has not been tested on devices that have encrypted filesystems.  Before proceeding please make sure you have Android Device Manager configured in case you need to recover your device.</string>
    <string name="dialog_enc_warning_okay">Okay</string>
    <string name="dialog_password_current_password_label">Current password</string>
    <string name="dialog_password_incorrect">Incorrect password.</string>
    <string name="pref_key_lock_immediately">lock_immediately</string>
    <string name="pref_desc_lock_immediately">When enabled, lock the device and turn off the screen as soon as your watch has disconnected.</string>
    <string name="pref_title_lock_immediately">Lock immediately</string>
</resources>
