<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/pref_key_enable"
        android:switchTextOff="@string/pref_enable_off"
        android:switchTextOn="@string/pref_enable_on"
        android:title="@string/app_name" />

    <PreferenceScreen
        android:dependency="@string/pref_key_enable"
        android:key="@string/pref_key_set_password"
        android:title="@string/pref_category_password" />

    <CheckBoxPreference
        android:dependency="@string/pref_key_enable"
        android:key="@string/pref_key_lock_immediately"
        android:summary="@string/pref_desc_lock_immediately"
        android:defaultValue="true"
        android:title="@string/pref_title_lock_immediately" />

    <PreferenceCategory android:title="@string/pref_category_about">
        <Preference
            android:enabled="false"
            android:key="@string/pref_key_version"
            android:summary=""
            android:title="@string/pref_version" />
        <Preference
            android:key="foo"
            android:summary=""
            android:title="Connection Log">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="net.npike.android.wearunlock.activity.LogActivity"
                android:targetPackage="net.npike.android.wearunlock" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>